--- a/.github/workflows/getReports.yml
+++ b/.github/workflows/getReports.yml
@@ -14,11 +14,8 @@ jobs:
 
       - name: Make Report Directory if needed
         run: mkdir -p Report
-      
-      - name: install jq
-        run: jq --version
 
       - name: curl Qiita API
         run: |
           cd Report
-          curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' "https://qiita.com//api/v2/authenticated_user/items?page=1&per_page=3" | jq -r ".[].id" | xargs -P 3 -I {id} curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' https://qiita.com/api/v2/items/{id} | jq '"\(.title), VIEW: \(.page_views_count),  LGTM: \(.likes_count)"'
+          curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' "https://qiita.com//api/v2/authenticated_user/items?page=1&per_page=3" | jq -r -R  'fromjson? | .[].id' | xargs -P 3 -I {id} curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' https://qiita.com/api/v2/items/{id} | jq '"\(.title), VIEW: \(.page_views_count),  LGTM: \(.likes_count)"'
