--- a/.github/workflows/getReports.yml
+++ b/.github/workflows/getReports.yml
@@ -15,7 +15,12 @@ jobs:
       - name: Make Report Directory if needed
         run: mkdir -p Report
 
-      - name: curl Qiita API
+      - name: curl Qiita API(Get Post IDs)
         run: |
           cd Report
-          curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' "https://qiita.com//api/v2/authenticated_user/items?page=1&per_page=3" | jq -r -R  'fromjson? | .[].id' | xargs -P 3 -I {id} curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' https://qiita.com/api/v2/items/{id} | jq '"\(.title), VIEW: \(.page_views_count),  LGTM: \(.likes_count)"'
+          curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' "https://qiita.com//api/v2/authenticated_user/items?page=1&per_page=3" | jq -r -R  'fromjson? | .[].id' > IDS.txt
+          cat IDS.txt
+          
+      - name: cur; Qiita API(Get LGTM and Views of each Post)
+        run: |
+          cat IDS.txt | xargs -P 3 -I {id} curl -sH 'Authorization: Bearer ${{ secrets.QIITA_ACCESS_TOKEN }}' https://qiita.com/api/v2/items/{id} | jq '"\(.title), VIEW: \(.page_views_count),  LGTM: \(.likes_count)"'
